package carbonserverpb;

// Regenerate with  protoc --gogo_out=. carbonserver.proto 

message FetchResponse {
    required string name = 1;
    required int32 startTime = 2;
    required int32 stopTime = 3;
    required int32 stepTime = 4;
    repeated double values = 5;
    repeated bool isAbsent = 6;
}

message GlobMatch {
    required string path = 1;
    required bool isLeaf = 2;
}

message GlobResponse {
    required string name = 1;
    repeated GlobMatch matches = 2;
}

message Retention {
	required int32 secondsPerPoint = 1;
	required int32 numberOfPoints = 2;
}

message InfoResponse {
	required string name = 1;
	required string aggregationMethod = 2;
	required int32 maxRetention = 3;
	required float xFilesFactor = 4;
	repeated Retention retentions = 5;
}
